--- a/app/views/issues/_attributes.html.erb
+++ b/app/views/issues/_attributes.html.erb
@@ -1,24 +1,22 @@
 <% fields_for :issue, @issue, :builder => TabularFormBuilder do |f| %>
 
-<div class="splitcontentleft">
-<% if @issue.new_record? || @allowed_statuses.any? %>
-<p><%= f.select :status_id, (@allowed_statuses.collect {|p| [p.name, p.id]}), :required => true %></p>
-<% else %>
-<p><label><%= l(:field_status) %></label> <%= h(@issue.status.name) %></p>
-<% end %>
-<p><label><%= l(:field_ordinamento) %></label> <%= f.text_field :ordinamento, :size => 2 %></p>
-<p><%= f.check_box :se_visible_web %></p>
-<p><%= f.check_box :se_visible_data %></p>
-<p><%= f.check_box :se_visible_newsletter %></p>
-<p><%= f.check_box :se_protetto %></p>
-<p><% if !@issue.new_record? && @issue.se_prenotazione %>
-    <%= f.check_box :se_prenotazione, :disabled => true %>
-  <% else %>
-    <%= f.check_box :se_prenotazione %>
-  <% end %>
-</p>
+<div class="splitcontents-3box">
+  <p><%= f.file_field :image, :label => :field_immagine %> </p>
+  <p id="prev" style="height: 155px;"> <%= image_tag @issue.image.url(:m) %></p>
+</div>
+<div class="splitcontents-3box">
 
-<p><%= f.select :priority_id, (@priorities.collect {|p| [p.name, p.id]}), {:required => true}, :disabled => !@issue.leaf? %></p>
+  <p><%= f.check_box :se_visible_web %></p>
+  <p><%= f.check_box :se_visible_data %></p>
+  <p><%= f.check_box :se_visible_newsletter %></p>
+  <p><%= f.check_box :se_protetto %></p>
+  <p><% if !@issue.new_record? && @issue.se_prenotazione %>
+        <%= f.check_box :se_prenotazione, :disabled => true %>
+    <% else %>
+        <%= f.check_box :se_prenotazione %>
+    <% end %>
+  </p>
+  <p><%= f.select :priority_id, (@priorities.collect {|p| [p.name, p.id]}), {:required => true}, :disabled => !@issue.leaf? %></p>
 <p><%= f.select :assigned_to_id, principals_options_for_select(@issue.assignable_users, @issue.assigned_to), :include_blank => true %></p>
 <% unless @project.issue_categories.empty? %>
 <p><%= f.select :category_id, (@project.issue_categories.collect {|c| [c.name, c.id]}), :include_blank => true %>
@@ -40,7 +38,12 @@
 </p>
 <% end %>
 </div>
-<div class="splitcontentright">
+<div class="splitcontents-3box">
+  <% if @issue.new_record? || @allowed_statuses.any? %>
+      <p><%= f.select :status_id, (@allowed_statuses.collect {|p| [p.name, p.id]}), :required => true %></p>
+  <% else %>
+      <p><label><%= l(:field_status) %></label> <%= h(@issue.status.name) %></p>
+  <% end %>
 <% if User.current.allowed_to?(:manage_subtasks, @project) %>
 <p id="parent_issue"><%= f.text_field :parent_issue_id, :size => 10 %></p>
 <div id="parent_issue_candidates" class="autocomplete"></div>
@@ -49,12 +52,18 @@
 <p><%= f.text_field :start_date, :size => 10, :disabled => !@issue.leaf? %><%= calendar_for('issue_start_date') if @issue.leaf? %></p>
 <p><%= f.text_field :due_date, :size => 10, :disabled => !@issue.leaf? %><%= calendar_for('issue_due_date') if @issue.leaf? %></p>
 <p><%= f.text_field :estimated_hours, :size => 3, :disabled => !@issue.leaf? %> <%= l(:field_hours) %></p>
+  <p><label><%= l(:field_ordinamento) %></label> <%= f.text_field :ordinamento, :size => 2 %></p>
+
 <% if @issue.leaf? && Issue.use_field_for_done_ratio? %>
 <p><%= f.select :done_ratio, ((0..10).to_a.collect {|r| ["#{r*10} %", r*10] }) %></p>
 <% end %>
+
 </div>
 
 <div style="clear:both;"> </div>
 <%= render :partial => 'issues/form_custom_fields' %>
 
 <% end %>
+<script type="text/javascript">
+    document.getElementById('issue_image').addEventListener('change', handleFileSelect, false);
+</script>
