paperclip 4 issues correction

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1128,5 +1128,4 @@ h2 img { vertical-align:middle; }
 
 .splitcontents-3box p {
     width: 100%;
-    padding-left: 145px;
-}
+    padding-left: 145px;                                          }
