--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -5,7 +5,7 @@
 
 <div class="box tabular">
   <p><%= f.select :asso_id, (Asso.all.collect {|c| [c.ragione_sociale, c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_asso) %></p>
-  <p><%= f.select :user_id, (User.all.collect {|c| [c.lastname + ' ' + c.firstname +  ' (' + c.login + ')', c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_user) %></p>
+  <p><%= f.select :user_id, (User.all.collect {|c| [c.lastname + ' ' + c.firstname +  ' (' + c.login + ')', c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_manager) %></p>
   <p><%= f.select :cross_organization_id, (CrossOrganization.all.collect {|c| [c.organizzazione + ' (' + c.sigla + ')', c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_cross_organization) %></p>
   <p><%= f.check_box :richiedinumeroregistrazione, :label => :label_richiedinumeroregistrazione %></p>
   <p><%= f.date_select :data_scadenza, :label => :field_data_scadenza %></p>
