--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -10,7 +10,7 @@
   <th style='width: 5%;'></th>
   <%= sort_header_tag('Org. Asso', :title => l(:label_organization), :style => 'width: 20%;text-align:left;')%>
   <%= sort_header_tag('Tipo_Sigla', :title => l(:label_cross_organization), :style => 'width: 15%;text-align:left;')%>
-  <%= sort_header_tag('responsabile', :title => l(:label_user), :style => 'width: 15%;text-align:left;')%>
+  <%= sort_header_tag('responsabile', :title => l(:label_manager), :style => 'width: 15%;text-align:left;')%>
   <%= sort_header_tag('data_scadenza', :title => l(:label_data_scadenza), :style => 'width: 10%;')%>
   <%= sort_header_tag('ConiNum?', :title => l(:label_richiedinumeroregistrazione), :style => 'width: 5%;')%>
   <%= sort_header_tag('comune', :title => l(:label_comune), :style => 'width: 10%;')%>
@@ -27,7 +27,7 @@
         <%= link_to organization.asso, asso_path(organization.asso) %>
     </td>
     <td><%= link_to h(organization.cross_organization), cross_organization_path(organization.cross_organization, :id => organization.cross_organization_id) %></td>
-    <td><%= link_to h(organization.user), user_path(organization.user, :id => organization.user_id) %></td>
+    <td><%= link_to h(organization.user), user_path(organization.user, :id => organization.user_id, :class => "icon " + organization.user.icon() ) %></td>
     <td align="left"><%= format_date(organization.data_scadenza) %></td>
     <td align="center"><%= check_box_tag '', 1, organization.richiedinumeroregistrazione, :disabled => 'disabled' %></td>
     <td align="left"><%=h organization.comune %></td>
